# scribble

./: Cargo.toml  justfile
migrations/: 20260220042227_create-files-table.down.sql  20260220042227_create-files-table.up.sql
src/: args.rs  config.rs  constants.rs  main.rs
src/repositories/: files.rs
src/utils/: db.rs  path.rs
