[package]
name = "scribble"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
async-trait = "0.1.89"
